--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,22 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="img-habitat-savane/2.png" />
+    <link rel="icon" type="image/x-icon" href="{{asset('assets/img-habitat-savane/2.png')}}" />
     <title>{% block title %}Le Zoo Arcadia{% endblock %}</title>
     <link rel="stylesheet" href="lib/animate/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-</head>
+
 
 <body>
 <nav class="navbar navbar-expand-sm bg- navbar-">
     <div class="container-fluid">
         <div>
             <a class="navbar-brand" href="accueil.html" style="margin-right:10px ;">
-                <img src="assets/img-habitat-savane/2.png" alt="logo" style="width:80px;" class="rounded-pill"/>
+                <img src="{{asset('assets/img-habitat-savane/2.png')}}" alt="logo" style="width:80px;" class="rounded-pill"/>
             </a>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"></button>
             <span class="navbar-toggler-icon"></span>
@@ -60,10 +57,13 @@
 {% endblock %}
 
 {% block javascripts %}
+
     {% block importmap %}{{ importmap('app') }}{% endblock %}
 {% endblock %}
-
-
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="{{ asset('assets/app.js')}}"></script>
 </body>
 </html>
 
